--- a/index.html
+++ b/index.html
@@ -6,58 +6,105 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>UPS Shipment Tracking</title>
 	<link rel="stylesheet" href="css/styles.css" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 
 <body>
-	<div class="container">
-		<h2>UPS Shipment Tracking</h2>
+	<div class="container py-4">
+		<h2 class="mb-4">UPS Shipment Tracking</h2>
 
 		<!-- Search by ID -->
-		<label for="trackingId">Tracking ID:</label>
-		<input type="text" id="trackingId" placeholder="Enter your tracking number" />
-		<button id="btnBuscarID">Search by ID</button>
+		<div class="row g-2 align-items-center mb-4">
+			<div class="col-12 col-sm-auto">
+				<label for="trackingId" class="form-label mb-0">Tracking ID:</label>
+			</div>
+			<div class="col-12 col-sm">
+				<input type="text" id="trackingId" class="form-control" placeholder="Enter your tracking number" />
+			</div>
+			<div class="col-12 col-sm-auto">
+				<button id="btnBuscarID" class="btn btn-primary w-100">🔍 Search</button>
+			</div>
+		</div>
 
 		<!-- Multiple Results by ID -->
-		<div id="resultadosMultiples" class="results-container"></div>
+		<div id="resultadosMultiples" class="results-container mb-5"></div>
 
-		<hr />
+		<!-- Date Search -->
+		<div class="container mt-5">
+			<div class="row g-3 align-items-end">
+				<div class="col-md-6">
+					<label for="startDate" class="form-label">Start Date:</label>
+					<div class="calendar-wrapper">
+						<input type="text" id="startDate" class="form-control" />
+						<span class="calendar-icon">📅</span>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<label for="endDate" class="form-label">End Date:</label>
+					<div class="calendar-wrapper">
+						<input type="text" id="endDate" class="form-control" />
+						<span class="calendar-icon">📅</span>
+					</div>
+				</div>
+			</div>
 
-		<!-- Search by Dates -->
-		<label for="startDate">Start Date:</label>
-		<input type="date" id="startDate" />
-		<label for="endDate">End Date:</label>
-		<input type="date" id="endDate" />
-		<button id="btnBuscarFechas">Search by Dates</button>
+			<div class="mt-3">
+				<button id="btnBuscarFechas" class="btn btn-primary">Search by Dates</button>
+			</div>
+		</div>
+
 
 		<!-- Individual Result by ID -->
-		<div class="result" id="resultado">
+		<div class="result mb-5" id="resultado">
 			<h3>Search Result by ID</h3>
-			<p><strong>IdTracking:</strong> <span id="resId"></span></p>
-			<p><strong>Required ETA:</strong> <span id="resEtaRequerida"></span></p>
-			<p><strong>Status:</strong> <span id="resEstado"></span></p>
-			<p><strong>Location:</strong> <span id="resUbicacion"></span></p>
-			<p><strong>Arrival Date:</strong> <span id="resFechaLlegada"></span></p>
-			<p><strong>Real ETA:</strong> <span id="resEtaReal"></span></p>
-			<p><strong>Date:</strong> <span id="resFecha"></span></p>
-			<p><strong>Hour:</strong> <span id="resHora"></span></p>
-			<p><strong>Delay Days:</strong> <span id="resDiasRetraso"></span></p>
-			<button id="btnGuardar" class="btn-save">Save</button>
+			<div class="row">
+				<div class="col-md-6">
+					<p><strong>IdTracking:</strong> <span id="resId"></span></p>
+				</div>
+				<div class="col-md-6">
+					<p><strong>Required ETA:</strong> <span id="resEtaRequerida"></span></p>
+				</div>
+				<div class="col-md-6">
+					<p><strong>Status:</strong> <span id="resEstado"></span></p>
+				</div>
+				<div class="col-md-6">
+					<p><strong>Location:</strong> <span id="resUbicacion"></span></p>
+				</div>
+				<div class="col-md-6">
+					<p><strong>Arrival Date:</strong> <span id="resFechaLlegada"></span></p>
+				</div>
+				<div class="col-md-6">
+					<p><strong>Real ETA:</strong> <span id="resEtaReal"></span></p>
+				</div>
+				<div class="col-md-6">
+					<p><strong>Date:</strong> <span id="resFecha"></span></p>
+				</div>
+				<div class="col-md-6">
+					<p><strong>Hour:</strong> <span id="resHora"></span></p>
+				</div>
+				<div class="col-md-6">
+					<p><strong>Delay Days:</strong> <span id="resDiasRetraso"></span></p>
+				</div>
+			</div>
+			<button id="btnGuardar" class="btn btn-success mt-2">Save</button>
 		</div>
 
 		<!-- Results by Date -->
-		<div id="tablaResultados" class="table-container">
+		<div id="tablaResultados" class="table-container mb-5">
 			<h3>Search Results</h3>
 
-			<!-- Status Filter -->
-			<label for="filtroEstado">Filter by status:</label>
-			<select id="filtroEstado"></select>
+			<div class="mb-2">
+				<label for="filtroEstado" class="form-label">Filter by status:</label>
+				<select id="filtroEstado" class="form-select"></select>
+			</div>
 
-			<p id="contadorResultados" style="display: none;"></p>
+			<p id="contadorResultados" class="mb-2" style="display: none;"></p>
 
 			<div class="table-responsive">
-				<table>
-					<thead>
+				<table class="table table-bordered table-striped">
+					<thead class="table-light">
 						<tr>
 							<th>IdTracking</th>
 							<th>Required ETA</th>
@@ -73,10 +120,18 @@
 				</table>
 			</div>
 
+			<!-- Controles de paginación -->
+			<div id="paginacion" class="pagination"></div>
+
 			<!-- Export Button -->
-			<button id="btnExportarExcel" style="margin-top: 10px;">📥 Export to Excel</button>
+			<button id="btnExportarExcel" class="btn btn-outline-primary mt-3">📥 Export to Excel</button>
 		</div>
 	</div>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+	<script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
+
 	<script src="js/scripts.js" defer></script>
 </body>
 
