--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="format-detection" content="date=no">
+	<meta http-equiv="Content-Language" content="en">
 	<title>UPS Shipment Tracking</title>
-	<link rel="stylesheet" href="css/styles.css" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
+	<link rel="stylesheet" href="css/styles.css" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 
@@ -20,19 +22,23 @@
 			<div class="col-12 col-sm-auto">
 				<label for="trackingId" class="form-label mb-0">Tracking ID:</label>
 			</div>
-			<div class="col-12 col-sm">
-				<input type="text" id="trackingId" class="form-control" placeholder="Enter your tracking number" />
+			<div class="row g-2 align-items-center">
+				<div class="col">
+					<input type="text" id="trackingId" class="form-control" placeholder="Enter your tracking number">
+				</div>
+				<div class="col-auto">
+					<button id="btnBuscarID" class="btn btn-primary">🔍 Search</button>
+				</div>
 			</div>
-			<div class="col-12 col-sm-auto">
-				<button id="btnBuscarID" class="btn btn-primary w-100">🔍 Search</button>
-			</div>
+
+
 		</div>
 
 		<!-- Multiple Results by ID -->
 		<div id="resultadosMultiples" class="results-container mb-5"></div>
 
-		<!-- Date Search -->
-		<div class="container mt-5">
+		<!-- Date Search (sin container anidado) -->
+		<div class="mt-5">
 			<div class="row g-3 align-items-end">
 				<div class="col-md-6">
 					<label for="startDate" class="form-label">Start Date:</label>
@@ -50,14 +56,13 @@
 				</div>
 			</div>
 
-			<div class="mt-3">
+			<div class="mt-3 text-center">
 				<button id="btnBuscarFechas" class="btn btn-primary">Search by Dates</button>
 			</div>
 		</div>
 
-
 		<!-- Individual Result by ID -->
-		<div class="result mb-5" id="resultado">
+		<div class="result mb-5" id="resultado" style="display:none;">
 			<h3>Search Result by ID</h3>
 			<div class="row">
 				<div class="col-md-6">
@@ -92,7 +97,7 @@
 		</div>
 
 		<!-- Results by Date -->
-		<div id="tablaResultados" class="table-container mb-5">
+		<div id="tablaResultados" class="table-container mb-5 mx-auto">
 			<h3>Search Results</h3>
 
 			<div class="mb-2">
@@ -119,19 +124,18 @@
 					<tbody id="cuerpoTabla"></tbody>
 				</table>
 			</div>
+			<!-- Acciones de la tabla -->
+			<div class="d-flex align-items-center justify-content-between mt-3">
+				<button id="btnExportarExcel" class="btn btn-outline-primary">📥 Export to Excel</button>
+				<div id="paginacion" class="pagination m-0"></div>
+			</div>
 
-			<!-- Controles de paginación -->
-			<div id="paginacion" class="pagination"></div>
-
-			<!-- Export Button -->
-			<button id="btnExportarExcel" class="btn btn-outline-primary mt-3">📥 Export to Excel</button>
 		</div>
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-	<script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
-
+	<!-- <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script> -->
 	<script src="js/scripts.js" defer></script>
 </body>
 
